fixed issue with margins on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,11 +163,12 @@ p {
 .vendors ul {
     list-style: none;
     text-align: center;
+    padding: 0;
 }
 
 .vendors li {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .vendors a:hover {
@@ -227,7 +228,7 @@ footer .list-inline-item {
         padding: 20px;
         margin-left: auto;
         margin-right: auto;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
 
     .row {
@@ -269,6 +270,15 @@ footer .list-inline-item {
         display: block;
     }
 
+    .media p {
+        font-size: 1.2rem;
+    }
+
+    .media h5 {
+        font-weight: 600;
+        font-size: 1.5rem;
+    }
+
     .media-body {
         text-align: center;
         max-width: 100%;
@@ -289,12 +299,14 @@ footer .list-inline-item {
     }
 
     .figure-img {
-        min-width: 300px;
+        min-width: 200px;
         max-height: 500px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     footer h5{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
 }
